[package]
name = "fgj_2023"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=n"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_editor_pls = "0.2.0"
rand = "0.8.5"
bevy_rapier3d = { version = "0.20.0", features = [ "simd-nightly", "debug-render" ] }
lazy_static = "1.4.0"